# LoAT-purrs

./: .cvsignore  .gitignore  BUGS  INSTALL  Makefile.am  NOTICE  README  README.md  TODO.tex  acinclude.m4  config.guess  config.h.in  configure.ac  depcomp  ltmain.sh  missing
CoStLy/: COPYING  Makefile.am  README  cimath.cpp  cimath.h  cinterval.cpp  cinterval.h  costly03_doc.ps  error.h
demos/: Makefile.am  purrs_eqs_cgi.cc  purrs_rrs_cgi.cc
doc/: .cvsignore  Makefile.am  definitions.dox  devref-browse.doxyconf-latex.in  devref-print.doxyconf-latex.in  devref.doxyconf-html.in  devref.tex  fdl.dox  fdl.tex  gpl.dox  gpl.tex  purrs.bib  purrs.sty  ric1.tex  ric2.tex  ric3.tex  user-browse.doxyconf-latex.in  user-print.doxyconf-latex.in  user.doxyconf-html.in  user.tex
infrastructure/: README  depinst  patch_filib++-2.0  patch_ginac-1.0.4
interfaces/: Makefile.am
interfaces/Prolog/: Makefile.am
m4/: Makefile.am  ac_check_gmp.m4  ac_check_gmp_exceptions.m4  ac_check_have_gmp.m4  ac_check_use_readline.m4  ginac.m4
src/: Blackboard.cc  Blackboard.defs.hh  Blackboard.inlines.hh  Blackboard.types.hh  Bool3.cc  Bool3.defs.hh  Bool3.inlines.hh  Bool3.types.hh  CInterval.types.hh  Cached_Expr.cc  Cached_Expr.defs.hh  Cached_Expr.inlines.hh  Cached_Expr.types.hh  Complex_Interval.cc  Complex_Interval.defs.hh  Complex_Interval.inlines.hh  Complex_Interval.types.hh  Constant.cc  Constant.defs.hh  Constant.inlines.hh  Constant.types.hh  Expr.cc  Expr.defs.hh  Expr.inlines.hh  Expr.types.hh  Expr_List.cc  Expr_List.defs.hh  Expr_List.inlines.hh  Expr_List.types.hh  Finite_Order_Info.cc  Finite_Order_Info.defs.hh  Finite_Order_Info.inlines.hh  Finite_Order_Info.types.hh  Functional_Equation_Info.cc  Functional_Equation_Info.defs.hh  Functional_Equation_Info.inlines.hh  Functional_Equation_Info.types.hh  Infinite_Order_Info.cc  Infinite_Order_Info.defs.hh  Infinite_Order_Info.inlines.hh  (+93 more)
src/Intervals/: Bool3.cc  Bool3.defs.hh  Bool3.inlines.hh  Bool3.types.hh  Boundary.cc  Boundary.defs.hh  Boundary.inlines.hh  Boundary.types.hh  IEEE754.h  Interval.cc  Interval.defs.hh  Interval.inlines.hh  Interval.types.hh  Makefile.am  round.h
src/Intervals/sysdep/: Makefile.am  alpha.h  c99.h  ix86.h  m68k.h  sparc.h
tests/: Makefile.am  bug1.cc  ehandlers.cc  ehandlers.hh  eqs_driver.cc  gosper_driver.cc  heap  heap_i_c  multivar_driver.cc  mvar_tests  polynomials  readlinebuf.hh  recurrences  rr_filter.cc  rrs_driver.cc  simpl_tests  simplify_driver.cc  zeil_tests  zeilberger_driver.cc
