# Copyright (C) 2001-2008 Roberto Bagnara <bagnara@cs.unipr.it>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AUTOMAKE_OPTIONS = foreign dist-bzip2 dist-zip 1.5

srcdir = @srcdir@
VPATH = @srcdir@

@SET_MAKE@

EXTRA_DIST = configure # purrs.lsm.in purrs.spec.in acinclude.m4 BUGS CREDITS

SUBDIRS = src doc m4 tests demos #interfaces
